--- a/ruby-raa/facter/HISTORY
+++ b/ruby-raa/facter/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 2.3.0
+	* PRE_BUILD, ftools.patch: Removed
+
 2010-06-17 Mark Bainter <mbainter@sourcemage.org>
 	* PRE_BUILD, BUILD, DEPENDS, DETAILS, INSTALL: spell created
 	* ftools.patch: enable building against Ruby 1.9.1
