--- a/devel/binutils/HISTORY
+++ b/devel/binutils/HISTORY
@@ -1,3 +1,6 @@
+2014-12-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.25
+
 2014-03-21 Remko van der Vossen <wich@sourcemage.org>
 	* BUILD: remove temporary workaround, 2.24 fixed the build failure
 
