--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-12-26 Ismael Luceno <ismael@sourcemage.org>
+	* emacs-lisp/FUNCTIONS: Replaced loops
+	* emacs-lisp/FUNCTIONS: Update site-lisp's loaddefs.el
+	* emacs-lisp/FUNCTIONS: Install gzipped emacs-lisp files
+	* emacs-lisp/FUNCTIONS: Fixed production of info files
+
 2014-12-25 Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/haskell-mode: new spell, Emacs mode for Haskell
 
