--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* gnome2-libs/libaccounts-glib: new spell, single-signon
+
 2014-12-26 Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/FUNCTIONS: Replaced loops
 	* emacs-lisp/FUNCTIONS: Update site-lisp's loaddefs.el
