--- a/devel/astyle/HISTORY
+++ b/devel/astyle/HISTORY
@@ -1,3 +1,6 @@
+2014-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.05.1
+
 2013-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.04
 
