--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2014-12-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.16.5
+
 2014-11-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.16.4
 
