--- a/graphics/libgphoto2/HISTORY
+++ b/graphics/libgphoto2/HISTORY
@@ -1,3 +1,6 @@
+2014-12-29 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 2.5.6
+
 2014-11-03 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 2.5.5
 	* DEPENDS: add libxml2 and possibly icu.1
