--- a/crypto/qca2/HISTORY
+++ b/crypto/qca2/HISTORY
@@ -1,3 +1,9 @@
+2014-12-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.1.0
+	* DEPENDS: several depends for plugins, cmake
+	* BUILD: use qt4_cmake_build
+	* CONFLICTS: added, the plugins are now included
+
 2012-05-07 Ladislav Hagara <hgr@vabo.cz>
 	* PRE_BUILD: added to compile with gcc 4.7
 
