--- a/crypto/qca-pkcs11/HISTORY
+++ b/crypto/qca-pkcs11/HISTORY
@@ -1,8 +1,4 @@
-2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DEPENDS: changed dependency on g++ to dependency on gcc with
-	  sub-depends on CXX (scripted)
-
-2009-03-16 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 2.0.0-beta2
-	  spell created
-
+2014-12-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated [replaced by qca2]
