--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-29 Eric Sandall <sandalle@sourcemage.org>
+	* net/ebtables,nftables,libnftnl: Added some Netfilter table user-space
+	  programs and libraries.
+
 2014-12-29 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/ranger: new spell, File manager with an ncurses frontend
 	* devel/cbp2make: new spell, Makefile generation tool for Code::Blocks IDE
