--- a/video-libs/gst-plugins-ugly-1.0/HISTORY
+++ b/video-libs/gst-plugins-ugly-1.0/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.5
+
 2013-12-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.2
 
