--- a/video-libs/gst-libav-1.0/HISTORY
+++ b/video-libs/gst-libav-1.0/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.5
+
 2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.3
 	* DEPENDS: add LIBAVCODEC
