--- a/devel/diffutils/HISTORY
+++ b/devel/diffutils/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on libsigsegv. Issue #186
+
 2013-04-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.3
 	* PRE_BUILD, glibc215.patch: deleted
