--- a/devel/m4/HISTORY
+++ b/devel/m4/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on libsigsegv. Issue #187
+
 2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.17
 	* glibc215.patch, PRE_BUILD: deleted - builds with glibc-2.20
