--- a/editors/gawk/HISTORY
+++ b/editors/gawk/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on libsigsegv. Issue #185
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: gmp, mpfr
 
