--- a/libs/libsigsegv/HISTORY
+++ b/libs/libsigsegv/HISTORY
@@ -1,3 +1,7 @@
+2014-12-30 Eric Sandall <sandalle@sourcemage.org>
+	* UP_TRIGGERS: Trigger dependent spells on upgrade
+	  Bug #185, Bug #186, and Bug #187
+
 2011-04-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.10, WEB_SITE updated
 
