--- a/latex/texlive/HISTORY
+++ b/latex/texlive/HISTORY
@@ -1,3 +1,8 @@
+2013-08-10 Javier Vasquez <j.e.vasquez.v@gmail.com>
+	* Fixes Bug #471
+	* BUILD: Remove --disable-luatex
+	* DEPENDS: Change lua51 by LUA (both lua and lua51 provide LUA)
+
 2013-11-18 Remko van der Vossen <wich@sourcemage.org>
 	* INSTALL: do not try to install luatex fonts if lua dependency is not
 	  enabled.
