--- a/audio-drivers/oss/HISTORY
+++ b/audio-drivers/oss/HISTORY
@@ -1,3 +1,6 @@
+2014-12-30 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated OSS_BRANCH=stable to v4.2-build2010
+
 2014-01-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated OSS_BRANCH=stable to v4.2-build2008
 
