--- a/xorg-proto/xproto/HISTORY
+++ b/xorg-proto/xproto/HISTORY
@@ -1,3 +1,6 @@
+2014-12-32 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.0.27
+
 2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.0.26
 
