--- a/xorg-app/bdftopcf/HISTORY
+++ b/xorg-app/bdftopcf/HISTORY
@@ -1,3 +1,6 @@
+2014-12-31  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.5
+
 2013-01-17  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
