--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-12-31 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: --with-freetype2 -> --with-freetype
+
 2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.36
 
