--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,6 @@
+2014-12-31 Treeeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1_57_0
+
 2014-07-10 Treeeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1_56_0
 	* SUB_DEPENDS, PRE_SUB_DEPENDS, CONFIGURE: add new libraries
