--- a/latex/lacheck/HISTORY
+++ b/latex/lacheck/HISTORY
@@ -1,3 +1,6 @@
+2014-12-31 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated SOURCE_URL to valid CTAN mirror forwarder
+
 2012-12-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fixed WEB_SITE
 
