--- a/crypto/openssl/INSTALL
+++ b/crypto/openssl/INSTALL
@@ -1,8 +1,3 @@
 make_single &&
-
-# workaround for bug #556
-# we don't install man pages as the pod2man calls fail
-# make MANDIR="$INSTALL_ROOT/usr/share/man" install &&
-make MANDIR="$INSTALL_ROOT/usr/share/man" install_sw &&
-
+make MANDIR="$INSTALL_ROOT/usr/share/man" install &&
 make_normal
