--- a/editors/lyx/HISTORY
+++ b/editors/lyx/HISTORY
@@ -1,3 +1,7 @@
+2015-01-01 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Removed SOURCE_URL[2] and SOURCE2_URL[2]
+	  updated spell to 2.1.2.2
+
 2014-09-16 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2.1.1
 
