--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2015-01-01 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on g++ (CXX in gcc) from IRC
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: libxt
 	* DETAILS: development: 7.11.2
