--- a/libs/protobuf/HISTORY
+++ b/libs/protobuf/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Remove -ffast-math from CXXFLAGS, doesn't compile with it
+
 2013-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.5.0
 
