--- a/libs/protobuf/HISTORY
+++ b/libs/protobuf/HISTORY
@@ -1,4 +1,5 @@
 2015-01-02 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.6.0
 	* BUILD: Remove -ffast-math from CXXFLAGS, doesn't compile with it
 
 2013-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
