--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: Updated to 1.42.12
+
 2014-01-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 1.42.9
 
