--- a/mobile/cpufreqd/HISTORY
+++ b/mobile/cpufreqd/HISTORY
@@ -1,3 +1,7 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* init.d/cpufreqd: Fix status() calling the correct variable
+
 2013-02-03 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: 2.4.2
 
