--- a/libs/tevent/HISTORY
+++ b/libs/tevent/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Fix WEB_SITE
+
 2013-11-23 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Removed, I don't even know, but it doesn't work (no files)
 
