--- a/libs/tevent/HISTORY
+++ b/libs/tevent/HISTORY
@@ -1,5 +1,10 @@
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Fix WEB_SITE
+	* DETAILS: Updated to 0.9.22
+	  samba.org is now all https://
+	  Fix WEB_SITE
+	  Not using GPG, see http://www.sourcemage.org/issues/331
+	* DEPENDS:  HTTP_DL_HANDLER (default wget) needs SSL support
+	  curl and aria2 (other handlers) need SSL sub-depends added.
 
 2013-11-23 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Removed, I don't even know, but it doesn't work (no files)
