--- a/disk/xfsprogs/HISTORY
+++ b/disk/xfsprogs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 3.2.2
+
 2012-12-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1.10
 
