--- a/libs/libaio/HISTORY
+++ b/libs/libaio/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.3.110
+
 2011-08-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.3.109
 
