--- a/net/samba4/HISTORY
+++ b/net/samba4/HISTORY
@@ -1,3 +1,10 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Update to latest stable 4.0 to 4.0.23
+	  samba.org is on https://
+	  Not using GPG, see http://www.sourcemage.org/issues/331
+	* DEPENDS:  HTTP_DL_HANDLER (default wget) needs SSL support
+	  curl and aria2 (other handlers) need SSL sub-depends added.
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
