--- a/xorg-extras/libpthread-stubs/HISTORY
+++ b/xorg-extras/libpthread-stubs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Patch configure script to always build the library
+
 2011-03-03 Eric Sandall <sandalle@sourcemage.org>
 	* UP_TRIGGERS: Do not use optional (and highly experimental) grep w/pcre
 
