--- a/xorg-lib/libxfixes/HISTORY
+++ b/xorg-lib/libxfixes/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on kbproto
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: missing dependencies
 
