--- a/xorg-lib/libxrender/HISTORY
+++ b/xorg-lib/libxrender/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on kbproto
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: added missing dependencies
 
