--- a/xfce/libxfce4menu/HISTORY
+++ b/xfce/libxfce4menu/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on a provider of GTK2
+
 2011-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated source urls
 	* DEPENDS: added gettext opt dep
