--- a/gnome3-libs/gnome-desktop3/HISTORY
+++ b/gnome3-libs/gnome-desktop3/HISTORY
@@ -1,5 +1,5 @@
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Depends on iso-codes and xkeyboard-config
+	* DEPENDS: Depends on iso-codes, itstool, and xkeyboard-config
 
 2013-06-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 3.8.3 (various memory leak fixes)
