--- a/gnome3-libs/pygobject3/HISTORY
+++ b/gnome3-libs/pygobject3/HISTORY
@@ -1,3 +1,6 @@
+2015-01-02 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on pycairo
+
 2012-10-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.4.1.1
 
