--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-03 Treeve Jelbert <treeve@sourcemage.org>
+	* ruby-raa/ruby-2.2: new sepll, latest ruby release
+
 2015-01-02 Ismael Luceno <ismael@sourcemage.org>
 	* emacs-lisp/vimrc-mode: new spell, Emacs major mode for vimrc
 	  files
