--- a/ruby-raa/ruby-2.1/HISTORY
+++ b/ruby-raa/ruby-2.1/HISTORY
@@ -1,3 +1,6 @@
+2015-01-03 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTSL add ruby-2.2
+
 2014-11-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.5
 	  SECURITY_PATCH=1 fix CVE-2014-8090
