--- a/ruby-raa/ruby-2.0/HISTORY
+++ b/ruby-raa/ruby-2.0/HISTORY
@@ -1,3 +1,6 @@
+2015-01-03  Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: add ruby-2.2
+
 2014-09-26 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 2.0.0-p576
 	  SECURITY_PATCH++ fixes CVE-2014-2525
