--- a/ruby-raa/ruby-1.8/HISTORY
+++ b/ruby-raa/ruby-1.8/HISTORY
@@ -1,3 +1,6 @@
+2015-01-03 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: add ruby-2.2
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
