--- a/python-pypi/pelican/HISTORY
+++ b/python-pypi/pelican/HISTORY
@@ -1,3 +1,8 @@
+2014-12-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.0; updated descriptions, source url
+	* DEPENDS: removed smartypants -- it's optional and included within
+	  typogrify suggest dep; added missing python-dateutil required dep
+
 2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.3.0
 
