--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-01-03 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/wok: new spell, static site generator
+
 2015-01-03 Treeve Jelbert <treeve@sourcemage.org>
 	* ruby-raa/ruby-2.2: new sepll, latest ruby release
 
