--- a/gnome2-libs/goffice/HISTORY
+++ b/gnome2-libs/goffice/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.10.18
+
 2014-01-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 0.10.9
 	* CONFIGURE: added
