--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.12.18
+
 2014-01-25 Robin Cook <rcook@wyms.net>
 	* DETAILS: updated to 1.12.9, corrected WEB_SITE
 	* CONFIGURE: remove no longer valid configure options
