--- a/devel/ragel/HISTORY
+++ b/devel/ragel/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 6.9
+
 2013-06-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: new website (http://www.complang.org/ragel)
 
