--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 3.0.3
 
