--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE_URL[0]
+
 2015-01-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 1.42.12
 
