--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fix SOURCE_URL[0]
+
 2014-12-31 Treeeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1_57_0
 
