--- a/video-libs/libebml/HISTORY
+++ b/video-libs/libebml/HISTORY
@@ -1,3 +1,6 @@
+2015-01-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3.0
+
 2011-09-27 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 1.2.2
 
