--- a/net/mtr/HISTORY
+++ b/net/mtr/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.86
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.85
 
