--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Ismael Luceno <ismael@sourcemage.org>
+	* PRE_BUILD: Check for patches directory existence
+
 2014-12-14 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.3.4-20141206
 	* patches/nextfile-fix.patch: Removed, applied by upstream
