--- a/audio-creation/nted/HISTORY
+++ b/audio-creation/nted/HISTORY
@@ -1,5 +1,6 @@
 2014-12-07 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to 1.10.18
+	* PRE_BUILD, nted-1.10.18-headerfix.patch: fix build on current system
 
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
