--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,4 +1,7 @@
-2014-112-17 Treeve Jelbert <treeve@sourcemage.org>
+2015-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.6.7
+
+2014-12-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.6.5
 
 2014-10-31 Treeve Jelbert <treeve@sourcemage.org>
