--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,6 @@
+2015-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.11
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.10
 	* BUILD: use INSTALL_ROOT
