--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,5 +1,6 @@
 2015-01-05 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Simplified ada binary selection
+	* PRE_BUILD: Removed bogus line
 
 2014-11-15 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: patch for freetype2 headers
