--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,6 +1,7 @@
 2015-01-05 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Simplified ada binary selection
 	* PRE_BUILD: Removed bogus line
+	* classpath-ft2include.patch, PRE_BUILD: Removed, applied by upstream
 
 2014-11-15 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: patch for freetype2 headers
