--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -2,6 +2,7 @@
 	* DETAILS: Simplified ada binary selection
 	* PRE_BUILD: Removed bogus line
 	* classpath-ft2include.patch, PRE_BUILD: Removed, applied by upstream
+	* PRE_BUILD: Removed unpacking of go and fortran, tarballs long gone
 
 2014-11-15 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: patch for freetype2 headers
