--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,7 @@
+2015-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.75
+	* DEPENDS: xfsprogs, btrfs-progs, jfsutils
+
 2014-10-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.73
 
