--- a/libs/newt/HISTORY
+++ b/libs/newt/HISTORY
@@ -1,3 +1,7 @@
+2015-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.52.18
+	* DEPENDS: python => PYTHON
+
 2014-09-14 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Update website
 	* DEPENDS: Clarify the python's module name
