--- a/windowmanagers/fluxbox/HISTORY
+++ b/windowmanagers/fluxbox/HISTORY
@@ -1,3 +1,10 @@
+2015-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.6
+	* DEPENDS: updated libxrandr, libxext flags; added freetype2 optional
+	  dependency; made fontconfig required only if libxft dependency is
+	  selected
+	* CONFIGURE: added systray configure option
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
