--- a/crypto/xca/HISTORY
+++ b/crypto/xca/HISTORY
@@ -1,3 +1,6 @@
+2015-01-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.1.0
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
