--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2015-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.37
+
 2014-12-31 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: --with-freetype2 -> --with-freetype
 	* *SUB_DEPENDS: Allow forcing freetype2 dependency (e.g. for freetype2
