--- a/disk/isomaster/HISTORY
+++ b/disk/isomaster/HISTORY
@@ -1,3 +1,6 @@
+2015-01-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.3.13
+
 2014-04-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.11
 
