--- a/mobile/libwbxml/HISTORY
+++ b/mobile/libwbxml/HISTORY
@@ -1,3 +1,7 @@
+2015-01-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.11.2
+	  fixed WEB_SITE
+
 2009-05-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.10.7
 
