--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Pavel Vinogradov <public@sourcemage.org>
+	* PRE_BUILD: made gettextize non-interactive
+
 2015-01-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.19.4
 
