--- a/graphics-libs/freetype2/HISTORY
+++ b/graphics-libs/freetype2/HISTORY
@@ -1,3 +1,6 @@
+2015-01-31 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 2.5.5
+
 2014-12-31 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: If harfbuzz support is requested, but harfbuzz was not built
 	  with freetype support, disable harfbuzz since it'll fail.
