--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2015-02-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.98.6
+
 2014-11-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.98.5
 
