--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,7 @@
+2015-02-01 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0], removed BRANCH
+	  updated spell to 0.19.8
+
 2014-11-26 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.19.4
 
