--- a/python-pypi/rbtools/HISTORY
+++ b/python-pypi/rbtools/HISTORY
@@ -1,3 +1,6 @@
+2015-02-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7
+
 2014-07-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.2
 
