--- a/net/stunnel/HISTORY
+++ b/net/stunnel/HISTORY
@@ -1,3 +1,6 @@
+2015-02-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.10
+
 2014-11-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.07
 	* init.d/stunnel: added PIDFILE
