--- a/xorg-lib/libpciaccess/HISTORY
+++ b/xorg-lib/libpciaccess/HISTORY
@@ -1,3 +1,6 @@
+2015-02-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.13.3
+
 2013-07-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.13.2
 
