--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,6 @@
+2015-02-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.0.0
+
 2015-01-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
 
