--- a/disk/parted/HISTORY
+++ b/disk/parted/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: Updated to 3.2
+
 2012-04-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 3.1
 
