--- a/net/nsd/HISTORY
+++ b/net/nsd/HISTORY
@@ -1,3 +1,6 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.1.1
+
 2014-11-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.1.0
 	* DEPENDS: added libevent optional dependency
