--- a/libs/libtirpc/HISTORY
+++ b/libs/libtirpc/HISTORY
@@ -1,3 +1,7 @@
+2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: don't do useless doc'ing
+	* DEPENDS: made libgssglue optional
+
 2014-09-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.5
 
