--- a/science-libs/cln/HISTORY
+++ b/science-libs/cln/HISTORY
@@ -1,3 +1,6 @@
+2015-02-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.4
+
 2014-02-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.3
 
