--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2015-02-06 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 2.3.0
+
 2015-01-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.2
 
